# afp-game

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile  LICENSE  README.md  config.h.in  game.cpp  game.hpp
Media/Maps/: level.tmx  level1.tmx  level2.tmx  level3.tmx  lol.tmx
TmxParser/: CMakeLists.txt  TmxEllipse.h  TmxImage.h  TmxImageLayer.h  TmxLayer.h  TmxMap.h  TmxMapTile.h  TmxObject.h  TmxObjectGroup.h  TmxPolygon.h  TmxPolyline.h  TmxPropertySet.h  TmxTile.h  TmxTileset.h  TmxUtil.h
TmxParser/.svn/: all-wcprops  entries
TmxParser/base64/: CMakeLists.txt
TmxParser/base64/.svn/: entries
TmxParser/tinyxml/: CMakeLists.txt
TmxParser/tinyxml/.svn/: all-wcprops  entries
TmxParser/zlib/: CMakeLists.txt
TmxParser/zlib/.svn/: all-wcprops  entries
include/AFP/: Application.hpp  ContactListener.h  ContactListener.hpp  RayCast.hpp  Utility.hpp  Utility.inl  World.hpp
include/AFP/Animation/: Animation.hpp
include/AFP/Command/: Category.hpp  Command.hpp  CommandQueue.hpp
include/AFP/Debug/: BoxDebugDraw.hpp
include/AFP/Effects/: PostEffect.hpp
include/AFP/Entity/: Character.hpp  Collectable.hpp  DataTables.hpp  Entity.hpp  Projectile.hpp  Sensor.hpp  Tile.hpp
include/AFP/GUI/: Button.hpp  Component.hpp  Container.hpp  GameUI.hpp  Label.hpp
include/AFP/Input/: Player.hpp
include/AFP/Parsers/: MapParser.hpp
include/AFP/Particles/: EmitterNode.hpp  Particle.hpp  ParticleNode.hpp
include/AFP/Resource/: ResourceHolder.hpp  ResourceIdentifiers.hpp
include/AFP/Scene/: SceneNode.hpp  SpriteNode.hpp
include/AFP/Sound/: MusicPlayer.hpp  SoundNode.hpp  SoundPlayer.hpp
include/AFP/State/: GameOverState.hpp  GameState.hpp  LevelSelectState.hpp  LoadingState.hpp  MenuState.hpp  PauseState.hpp  SettingsState.hpp  State.hpp  StateIdentifiers.hpp  StateStack.hpp  TitleState.hpp
src/: Application.cpp  ContactListener.cpp  Main.cpp  ParallelTask.cpp  RayCast.cpp  Utility.cpp  World.cpp  application.cpp  application.hpp  category.hpp  character.cpp  character.hpp  command.cpp  command.hpp  commandqueue.cpp  commandqueue.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  gamestate.cpp  gamestate.hpp  loadingstate.cpp  loadingstate.hpp  main.cpp  menustate.cpp  menustate.hpp  paralleltask.cpp  paralleltask.hpp  pausestate.cpp  pausestate.hpp  player.cpp  player.hpp  resourceholder.hpp  resourceholder.inl  resourceidentifiers.hpp  scenenode.cpp  scenenode.hpp  spritenode.cpp  spritenode.hpp  (+13 more)
src/Animation/: Animation.cpp
src/Command/: Command.cpp  CommandQueue.cpp
src/Debug/: BoxDebugDraw.cpp
src/Effects/: PostEffect.cpp
src/Entities/: Character.cpp  Collectable.cpp  DataTables.cpp  Entity.cpp  Projectile.cpp  Sensor.cpp  Tile.cpp
src/GUI/: Button.cpp  Component.cpp  Container.cpp  GameUI.cpp  Label.cpp
src/Input/: Player.cpp
src/Parsers/: MapParser.cpp
src/Particles/: EmitterNode.cpp  ParticleNode.cpp
src/Scene/: SceneNode.cpp  SpriteNode.cpp
src/Sound/: MusicPlayer.cpp  SoundNode.cpp  SoundPlayer.cpp
src/State/: GameOverState.cpp  GameState.cpp  LevelSelectState.cpp  LoadingState.cpp  MenuState.cpp  PauseState.cpp  SettingsState.cpp  State.cpp  StateStack.cpp  TitleState.cpp
